HARMONY-1874: Change to_email configurations from secrets to variables.

--- a/.github/workflows/hoss-test-suite.yml
+++ b/.github/workflows/hoss-test-suite.yml
@@ -94,6 +94,6 @@ jobs:
           username: ${{ secrets.SMTP_USER }}
           password: ${{ secrets.SMTP_PASSWORD }}
           subject: HOSS regression test of ${{ github.repository }} failed
-          to: ${{ secrets.TO_EMAIL_HOSS }}
+          to: ${{ vars.TO_EMAIL_HOSS }}
           from: ${{ secrets.FROM_EMAIL }}
           body: HOSS regression test of ${{ github.repository }} failed! View the details at ${{ env.RUN_URL }}.
