--- a/.github/workflows/variable-subsetter-test-suite.yml
+++ b/.github/workflows/variable-subsetter-test-suite.yml
@@ -20,10 +20,6 @@ name: Run variable-subsetter test suite
 on:
   workflow_call:
     inputs:
-      docker-image-tag:
-        required: false
-        type: string
-        default: 'latest'
       harmony-environment:
         required: true
         type: string
@@ -31,10 +27,6 @@ on:
   repository_dispatch:
     types: [harmony-service-example]
     inputs:
-      docker-image-tag:
-        required: false
-        type: string
-        default: 'latest'
       harmony-environment:
         required: true
         type: choice
@@ -55,7 +47,7 @@ jobs:
         run: echo "RUN_URL=${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}" >> $GITHUB_ENV
 
       - name: Pull Docker image
-        run: docker pull ghcr.io/nasa/regression-tests-variable-subsetter:${{ github.event.client_payload.docker-image-tag }}
+        run: docker pull ghcr.io/nasa/regression-tests-variable-subsetter:latest
 
       - name: Set HARMONY_HOST_URL
         run: |
