--- a/.github/workflows/hoss-test-suite.yml
+++ b/.github/workflows/hoss-test-suite.yml
@@ -23,6 +23,10 @@ on:
       harmony-environment:
         required: true
         type: string
+      docker-image-tag:
+        required: false
+        type: string
+        default: 'latest'
 
   repository_dispatch:
     types: [hoss]
@@ -34,6 +38,10 @@ on:
           - sit
           - uat
           - prod
+      docker-image-tag:
+        required: false
+        type: string
+        default: 'latest'
 
 jobs:
   hoss_job:
@@ -47,7 +55,7 @@ jobs:
         run: echo "RUN_URL=${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}" >> $GITHUB_ENV
 
       - name: Pull Docker image
-        run: docker pull ghcr.io/nasa/regression-tests-hoss:latest
+        run: docker pull ghcr.io/nasa/regression-tests-hoss:${{ github.event.client_payload.docker-image-tag }}
 
       - name: Set HARMONY_HOST_URL
         run: |
