--- a/.github/workflows/variable-subsetter-test-suite.yml
+++ b/.github/workflows/variable-subsetter-test-suite.yml
@@ -10,9 +10,6 @@
 # - EDL_USER
 # - EDL_PASSWORD
 #
-# Variables in each environment:
-# - HARMONY_HOST_URL
-#
 # Note: A workflow_call event can only have inputs of type boolean, number or
 # string.
 name: Run variable-subsetter test suite
@@ -44,7 +41,7 @@ on:
         default: 'latest'
 
 jobs:
-  variable_subsetter_job:
+  base_job:
     environment: ${{ github.event.client_payload.harmony-environment }}
     runs-on: ubuntu-latest
     steps:
@@ -53,9 +50,6 @@ jobs:
 
       - name: Get the URL of the current workflow run
         run: echo "RUN_URL=${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}" >> $GITHUB_ENV
-
-      - name: Pull Docker image
-        run: docker pull ghcr.io/nasa/regression-tests-variable-subsetter:${{ github.event.client_payload.docker-image-tag || 'latest' }}
 
       - name: Set HARMONY_HOST_URL
         run: |
@@ -70,6 +64,31 @@ jobs:
             echo "HARMONY_HOST_URL=https://harmony.sit.earthdata.nasa.gov" >> $GITHUB_ENV
           fi
 
+      - name: Load Harmony Service Config from Environment Variable
+        id: load-config
+        run: |
+          # Use the event type to select the appropriate service list
+          echo "github.event.action: ${{ github.event.action }}"
+          echo "github.event_name: ${{ github.event_name }}"
+          echo "SERVICES_TESTS=$(echo '${{ vars.SERVICES_TESTS_CONFIG }}' | jq -r '."${{ github.event.action || github.event_name }}"')" >> $GITHUB_ENV
+
+      - name: Create Matrix Configuration
+        id: create-matrix
+        run: |
+          # Split the selected service list into an array format and set it as the matrix
+          echo "::set-output name=matrix::$(echo "${{ env.SERVICES_TESTS }}" | tr ',' '\n' | jq -c -R '[inputs] | {service: .}')"
+
+  run-tests:
+    needs: base_job
+    environment: ${{ github.event.client_payload.harmony-environment }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix: ${{ fromJson(needs.base_job.outputs['create-matrix.matrix']) }}
+
+    steps:
+      - name: Pull Docker image
+        run: docker pull ghcr.io/nasa/regression-tests-${{ matrix.service }}:${{ github.event.client_payload.docker-image-tag || 'latest' }}
+
       - name: Execute notebook
         id: test-step
         working-directory: ./test
@@ -77,15 +96,24 @@ jobs:
           EDL_USER: ${{ secrets.EDL_USER }}
           EDL_PASSWORD: ${{ secrets.EDL_PASSWORD }}
           HARMONY_HOST_URL: ${{ env.HARMONY_HOST_URL }}
-        run: ./run_notebooks.sh variable-subsetter
+        run: ./run_notebooks.sh ${{ matrix.service }}
 
       - name: Save notebook as an artifact
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: notebook-output
-          path: test/output/variable-subsetter/Results.ipynb
+          path: test/output/${{ matrix.service }}/Results.ipynb
 
+      - name: Set Test Outcome
+        if: always()
+        run: echo "::set-output name=outcome::${{ steps.test-step.outcome }}"
+
+  email_job:
+    needs: run-tests
+    environment: ${{ github.event.client_payload.harmony-environment }}
+    runs-on: ubuntu-latest
+    steps:
       - name: Send mail
         if: always()
         uses: dawidd6/action-send-mail@v3
@@ -94,7 +122,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.SMTP_USER }}
           password: ${{ secrets.SMTP_PASSWORD }}
-          subject: variable-subsetter regression test result is ${{ steps.test-step.outcome }}
+          subject: variable-subsetter regression test result is ${{ needs.run-tests.outputs.outcome }}
           to: ${{ vars.TO_EMAIL_VARIABLE_SUBSETTER }}
           from: ${{ secrets.FROM_EMAIL }}
-          body: variable-subsetter regression test result is ${{ steps.test-step.outcome }}! View the details at ${{ env.RUN_URL }}.
+          body: ${{ matrix.service }} regression test result is ${{ needs.run-tests.outputs.outcome }}! View the details at ${{ env.RUN_URL }}.
