--- a/.github/workflows/variable-subsetter-test-suite.yml
+++ b/.github/workflows/variable-subsetter-test-suite.yml
@@ -85,9 +85,9 @@ jobs:
     environment: ${{ github.event.client_payload.harmony-environment }}
     runs-on: ubuntu-latest
     outputs:
-      outcome: ${{ steps.test-step.outcome }}
       run_url: ${{ needs.base-job.outputs.run_url }}
     strategy:
+      fail-fast: false
       matrix: ${{ fromJson(needs.base-job.outputs.matrix) }}
 
     steps:
@@ -118,10 +118,6 @@ jobs:
           name: notebook-output
           path: test/output/${{ matrix.service }}/Results.ipynb
 
-      - name: Set Test Outcome
-        if: always()
-        run: echo "outcome=${{ steps.test-step.outcome }}" >> $GITHUB_OUTPUT
-
   email_job:
     needs: run-tests
     if: always()
@@ -135,7 +131,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.SMTP_USER }}
           password: ${{ secrets.SMTP_PASSWORD }}
-          subject: ${{ github.event.action }} regression test result is ${{ needs.run-tests.outputs.outcome }}
+          subject: ${{ github.event.action }} regression test result is ${{ needs.run-tests.result }}
           to: ${{ vars.TO_EMAIL_VARIABLE_SUBSETTER }}
           from: ${{ secrets.FROM_EMAIL }}
-          body: ${{ github.event.action }} regression test result is ${{ needs.run-tests.outputs.outcome }}! View the details at ${{ needs.run-tests.outputs.run_url }}.
+          body: ${{ github.event.action }} regression test result is ${{ needs.run-tests.result }}! View the details at ${{ needs.run-tests.outputs.run_url }}.
