--- a/.github/workflows/notebook-test-suite.yml
+++ b/.github/workflows/notebook-test-suite.yml
@@ -32,6 +32,39 @@ on:
         type: string
         default: 'latest'
 
+  workflow_dispatch:
+    inputs:
+      harmony-environment:
+        description: "Select the Harmony environment to run the test in"
+        required: true
+        type: choice
+        options:
+          - uat
+          - production
+      service-name:
+        description: "Select the service to run tests against"
+        required: true
+        type: choice
+        options:
+          - geoloco
+          - harmony
+          - harmony-gdal-adapter
+          # - harmony-netcdf-to-zarr  # Commented out because needs AWS credentials
+          - harmony-regression
+          - harmony-regridder
+          - harmony-service-example
+          - hoss
+          - hybig
+          - query-cmr
+          - subset-band-name
+          - swath-projector
+          - trajectory-subsetter
+      docker-image-tag:
+        description: "Optional Docker image tag to use for the tests"
+        required: false
+        type: string
+        default: 'latest'
+
   repository_dispatch:
     types: [all,geoloco,harmony-gdal-adapter,harmony-netcdf-to-zarr,harmony-service-example,hoss,hybig,net2cog,swath-projector,trajectory-subsetter]
     inputs:
@@ -48,7 +81,7 @@ on:
 
 jobs:
   base:
-    environment: ${{ github.event.client_payload.harmony-environment }}
+    environment: ${{ github.event.client_payload.harmony-environment || inputs.harmony-environment }}
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.create-matrix.outputs.matrix }}
@@ -63,10 +96,10 @@ jobs:
 
       - name: Set HARMONY_HOST_URL
         run: |
-          if [ "${{ github.event.client_payload.harmony-environment }}" == "uat" ]; then
+          if [ "${{ github.event.client_payload.harmony-environment || inputs.harmony-environment }}" == "uat" ]; then
             echo "HARMONY_HOST_URL=https://harmony.uat.earthdata.nasa.gov"
             echo "HARMONY_HOST_URL=https://harmony.uat.earthdata.nasa.gov" >> $GITHUB_ENV
-          elif [ "${{ github.event.client_payload.harmony-environment }}" == "prod" ]; then
+          elif [ "${{ github.event.client_payload.harmony-environment || inputs.harmony-environment }}" == "prod" ]; then
             echo "HARMONY_HOST_URL=https://harmony.earthdata.nasa.gov"
             echo "HARMONY_HOST_URL=https://harmony.earthdata.nasa.gov" >> $GITHUB_ENV
           else
@@ -78,14 +111,14 @@ jobs:
         id: create-matrix
         run: |
           # Use the event type to select the appropriate service list
-          SERVICES_TESTS=$(cat ./config/services_tests_config_${{ github.event.client_payload.harmony-environment }}.json | jq -r '."${{ github.event.action }}"')
+          SERVICES_TESTS=$(cat ./config/services_tests_config_${{ github.event.client_payload.harmony-environment || inputs.harmony-environment }}.json | jq -r '."${{ github.event.action || inputs.service-name }}"')
           # Split the selected service list into an array format and set it as the matrix
           MATRIX=$(echo ",$SERVICES_TESTS" | tr ',' '\n' | awk '{$1=$1;print}' | jq -c -R '[inputs] | {service: .}')
           echo "matrix=$MATRIX" >> $GITHUB_OUTPUT
 
   test:
     needs: base
-    environment: ${{ github.event.client_payload.harmony-environment }}
+    environment: ${{ github.event.client_payload.harmony-environment || inputs.harmony-environment }}
     runs-on: ubuntu-latest
     outputs:
       run_url: ${{ needs.base.outputs.run_url }}
@@ -119,12 +152,12 @@ jobs:
   email:
     needs: test
     if: always()
-    environment: ${{ github.event.client_payload.harmony-environment }}
+    environment: ${{ github.event.client_payload.harmony-environment || inputs.harmony-environment }}
     runs-on: ubuntu-latest
     steps:
       - name: Get TO_EMAIL
         run: |
-          SERVICE_EMAILS=$(echo '${{ vars.SERVICES_EMAILS_CONFIG }}' | jq -r '."${{ github.event.action }}"')
+          SERVICE_EMAILS=$(echo '${{ vars.SERVICES_EMAILS_CONFIG }}' | jq -r '."${{ github.event.action || inputs.service-name }}"')
           if [ "$SERVICE_EMAILS" == "null" ]; then
             SERVICE_EMAILS=${{ vars.TO_EMAIL_DEFAULT }}
           fi
@@ -137,7 +170,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.SMTP_USER }}
           password: ${{ secrets.SMTP_PASSWORD }}
-          subject: ${{ github.event.action }} regression test result is ${{ needs.test.result }}
+          subject: ${{ github.event.action || inputs.service-name }} regression test result is ${{ needs.test.result }}
           to: ${{ env.TO_EMAIL }}
           from: ${{ secrets.FROM_EMAIL }}
-          body: ${{ github.event.action }} regression test result is ${{ needs.test.result }}! View the details at ${{ needs.test.outputs.run_url }}.
+          body: ${{ github.event.action || inputs.service-name }} regression test result is ${{ needs.test.result }}! View the details at ${{ needs.test.outputs.run_url }}.
