HARMONY-1874: Fix workflow dispatch PROD option.

--- a/.github/workflows/notebook-test-suite.yml
+++ b/.github/workflows/notebook-test-suite.yml
@@ -41,7 +41,7 @@ on:
         type: choice
         options:
           - uat
-          - production
+          - prod
       service-name:
         description: "Select the service to run tests against"
         required: true
