--- a/test/subset-band-name/environment.yaml
+++ b/test/subset-band-name/environment.yaml
@@ -1,7 +1,7 @@
 name: papermill-subset-band-name
 channels:
   - conda-forge
-  - defaults
+  - nodefaults
 dependencies:
   - python=3.11.0
   - notebook=7.0.6
