--- a/test/subset-band-name/environment.yaml
+++ b/test/subset-band-name/environment.yaml
@@ -3,14 +3,12 @@ channels:
   - conda-forge
   - nodefaults
 dependencies:
-  - python=3.11.0
-  - notebook=7.0.6
-  - papermill=2.3.4
-  - python-dateutil=2.8.2
+  - python=3.11.10
+  - notebook=7.2.2
+  - numpy=1.26.4
+  - papermill=2.6.0
   - hdf4=4.2.15
-  - gcc=13.2.0
-  - zlib=1.2.13
+  - pyhdf=0.11.3
   - pip:
-    - harmony-py==0.4.10
-    - pyhdf==0.11.3
-    - numpy==1.26.2
+    - harmony-py==0.4.15
+    - xarray==2024.9.0
