DAS-2214: Update all environment files to exclude conda's default channel.
This will ensure we don't run into licensing issues.

--- a/test/harmony-regression/environment.yaml
+++ b/test/harmony-regression/environment.yaml
@@ -1,7 +1,7 @@
 name: papermill-harmony-regression
 channels:
   - conda-forge
-  - defaults
+  - nodefaults
 dependencies:
   - python=3.10
   - notebook=6.5.4
