--- a/test/regridder/environment.yaml
+++ b/test/regridder/environment.yaml
@@ -1,7 +1,7 @@
 name: papermill-regridder
 channels:
   - conda-forge
-  - defaults
+  - nodefaults
 dependencies:
   - python=3.9
   - notebook=6.5.4
