--- a/test/swath-projector/environment.yaml
+++ b/test/swath-projector/environment.yaml
@@ -1,7 +1,7 @@
 name: papermill-swath-projector
 channels:
   - conda-forge
-  - defaults
+  - nodefaults
 dependencies:
   - python=3.10
   - notebook=6.5.4
