add `sambah-image` to Makefile

--- a/test/Makefile
+++ b/test/Makefile
@@ -57,6 +57,10 @@ net2cog-image: Dockerfile net2cog/environment.yaml
 	docker build -t ghcr.io/nasa/regression-tests-net2cog:latest -f ./Dockerfile \
 	--build-arg notebook=net2cog_Regression.ipynb --build-arg sub_dir=net2cog .
 
+sambah-image: Dockerfile sambah/environment.yaml
+	docker build -t ghcr.io/nasa/regression-tests-sambah:latest -f ./Dockerfile \
+	--build-arg notebook=SAMBAH_Regression.ipynb --build-arg sub_dir=sambah .
+
 images: harmony-image \
 	harmony-regression-image \
 	hga-image \
@@ -70,4 +74,5 @@ images: harmony-image \
 	trajectory-subsetter-image \
 	variable-subsetter-image \
 	geoloco-image \
-	net2cog-image
+	net2cog-image \
+	sambah-image
