add "sambah" image to build-all-images.yml GitHub Actions workflow

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -58,6 +58,9 @@ jobs:
           -
             image: "net2cog"
             notebook: "net2cog_Regression.ipynb"
+          -
+            image: "sambah"
+            notebook: "SAMBAH_Regression.ipynb"
 
     uses: ./.github/workflows/build-target-image.yml
     with:
