--- a/test/sambah/environment.yaml
+++ b/test/sambah/environment.yaml
@@ -3,12 +3,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10
+  - python=3.12
   - notebook=6.5.4
   - papermill=2.3.4
-  - python-dateutil=2.7.5
-  - numpy=1.24.3
-  - netCDF4=1.6.3
-  - xarray=2022.12.0
-  - pip:
-    - harmony-py
+  - python-dateutil=2.8.2
+  - numpy=2.1.3
+  - netCDF4=1.7.2
+  - xarray=2024.10.0
+  - harmony-py=0.4.15
