integrate opera-rtc-s1-browse test with notebook test suite

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -58,6 +58,9 @@ jobs:
           -
             image: "net2cog"
             notebook: "net2cog_Regression.ipynb"
+          -
+            image: "opera-rtc-s1-browse"
+            notebook: "opera-rtc-s1-browse_Regression.ipynb"
 
     uses: ./.github/workflows/build-target-image.yml
     with:
