--- a/test/opera-rtc-s1-browse/environment.yaml
+++ b/test/opera-rtc-s1-browse/environment.yaml
@@ -5,5 +5,6 @@ channels:
 dependencies:
   - python=3.12
   - pip=24.3.1
-  - pip:
-    - harmony-py==0.5.0
+  - notebook=7.2.2
+  - papermill=2.6.0
+  - harmony-py==0.4.15
