--- a/.github/workflows/notebook-test-suite.yml
+++ b/.github/workflows/notebook-test-suite.yml
@@ -60,6 +60,7 @@ on:
           - subset-band-name
           - swath-projector
           - trajectory-subsetter
+          - opera-rtc-s1-browse
       docker-image-tag:
         description: "Optional Docker image tag to use for the tests"
         required: false
