--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,10 +13,7 @@ repos:
     rev: v0.7.1
     hooks:
       - id: ruff
-        args: ["--fix", "--show-fixes"]
-  - repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 24.10.0
-    hooks:
-      - id: black-jupyter
-        args: ["--skip-string-normalization"]
-        language_version: python3.11
+        args: ["--fix", "--show-fixes", "--extend-select", "I"]
+        types_or: [python, jupyter]
+      - id: ruff-format
+        types_or: [python, jupyter]
