--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,7 @@ lint.select = [
 
 [tool.ruff.format]
 quote-style = "single"
+
+# Override for long path names in Geoloco test notebook
+[tool.ruff.lint.per-file-ignores]
+"test/geoloco/Geoloco_Regression.ipynb" = ["E501"]
