--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
     rev: v0.7.1
     hooks:
       - id: ruff
-        args: ["--fix", "--show-fixes", "--extend-select", "I"]
+        args: ["--fix", "--show-fixes"]
         types_or: [python, jupyter]
       - id: ruff-format
         types_or: [python, jupyter]
