trade-187: include share-util in docker images
Update kernelspec metadata to use python3 instead of papermill-sambah.

Removes defaults channel.

Updates python packages.

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -61,6 +61,7 @@ jobs:
           -
             image: "sambah"
             notebook: "SAMBAH_Regression.ipynb"
+            shared-utils: "true"
             lfs: "true"
           -
             image: "opera-rtc-s1-browse"
