--- a/test/sambah/environment.yaml
+++ b/test/sambah/environment.yaml
@@ -1,12 +1,11 @@
 name: papermill-sambah
 channels:
   - conda-forge
-  - defaults
+  - nodefaults
 dependencies:
   - python=3.12
-  - notebook=6.5.4
-  - papermill=2.3.4
-  - python-dateutil=2.8.2
+  - notebook=7.2.2
+  - papermill==2.6.0
   - numpy=2.1.3
   - netCDF4=1.7.2
   - xarray=2024.10.0
